--- a/jenkinsfile
+++ b/jenkinsfile
@@ -43,9 +43,14 @@ pipeline {
         stage('Test') {
             steps {
                 script {
-                    docker.image("hello-world-zig:${env.BUILD_NUMBER}").inside {
-                        sh '/app/zig-out/bin/hello'
-                    }
+                    sh '''
+                        # Ensure Nix is installed
+                        curl -L https://nixos.org/nix/install | sh
+                        . $HOME/.nix-profile/etc/profile.d/nix.sh
+
+                        # Enter dev shell and build
+                        nix develop --command zig build test
+                    '''
                 }
             }
         }
