--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,8 +6,8 @@ pipeline {
     }
 
     environment {
-        NIX_REMOTE = 'daemon'
-        NIX_PATH = '/nix/var/nix/profiles/per-user/root/channels'
+        registryName = "ifba/hello-world-zig"
+        app = ''
     }
 
     stages {
@@ -20,7 +20,7 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    docker.build("hello-world-zig:${env.BUILD_NUMBER}")
+                    app = docker.build registryName + ":$BUILD_NUMBER"
                 }
             }
         }
@@ -28,10 +28,15 @@ pipeline {
         stage('Run') {
             steps {
                 script {
-                    docker.image("hello-world-zig:${env.BUILD_NUMBER}").inside {
+                    app.inside {
                         sh '/app/hello'
                     }
                 }
+            }
+        }
+         stage('Clean up') {
+            steps {
+                sh "docker rmi $registryName:$BUILD_NUMBER"
             }
         }
     }
